--- a/A2/TODO
+++ b/A2/TODO
@@ -1,6 +1,9 @@
-5d - which pred we need to plot? the orginal? the prediction of "aba" from the forward pass?
 2d - at the end of the audio agregating
 3d-h - at the end of the audio agregating
 5d - consider add log version
-6
-7
+6 d + e
+7 d + e
+Questions:
+    1. why there is diffrence between gt and text to align?
+    2. 5d - should i plot the pred matrix that was given or the forward matrix?
+    3. 6d + 7d - prob_mat is the forward matrix?
